# ai-playground

./: .env  .gitignore  A2C.ipynb  A2C_custom_env.ipynb  A2C_rsi_and_ema_custom_env.ipynb  A2C_rsi_custom_env.ipynb  LSTM.ipynb  PPO_PARTIAL_LSTM_64_1_peaks_with_fee.ipynb  PPO_PARTIAL_LSTM_64_1_peaks_with_fee_export.ipynb  PPO_PARTIAL_LSTM_64_1_peaks_with_fee_icp_run.ipynb  PPO_PARTIAL_LSTM_64_1_peaks_with_fee_test_run.ipynb  PPO_PARTIAL_LSTM_64_1_with_fee.ipynb  PPO_PARTIAL_LSTM_64_1_with_free.ipynb  PPO_PARTIAL_LSTM_64_1_without_fee RPPO CNN.ipynb  PPO_PARTIAL_LSTM_64_1_without_fee RPPO.ipynb  PPO_PARTIAL_LSTM_64_1_without_fee.ipynb  PPO_buy_and_hold.ipynb  PPO_custom_env.ipynb  PPO_rsi_and_ema_custom_env.ipynb  PPO_rsi_custom_env.ipynb  PPO_with_icp.ipynb  README.md  __init__.py  a2c.ipynb  animate_logs.ipynb  buy_sell_crypto.ipynb  model.onnx  recurrent_actor_critic_policy.onnx  requirements.txt  setup.py
api/: .env  .env.example  .gitignore  README.md  __init__.py  app.py  compose.yaml  config.py  database_models.py  env_manager.py  env_wrapper.py  icp.py  models.py  request_models.py  utils.py
envs/: CustomBuySellEnv.py
extractors/: lstm_extractor.py
icp-canister/: Cargo.toml  README.md  build.sh  bun.lockb  canister_ids.json  dfx.json  model.onnx  package-lock.json  package.json  upload.sh  upload_mainnet.sh
icp-canister/src/host_ai_model_backend/: Cargo.toml  host_ai_model_backend.did
icp-canister/src/host_ai_model_backend/src/: action.rs  constants.rs  get_random_bypass.rs  lib.rs  onnx.rs  storage.rs
meta/: buy_and_hold_env.py  custom_env.py  (+3 more)
(+38 files in other folders)
